# baseTest

./: .gitignore  CMakeLists.txt  build.sh
src/: main.cu
src/my_helper/: utils.h
